<resources>
    <string name="app_name">official orinab</string>
    <string name="app_is_run">official orinab is run</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYmFobWFuemFyZSIsImEiOiJja3lwcWNlMDYwY204MzFtbWk5b3U5OHl6In0.MI9MTy5-L0Yf0dxpmvtjUA</string>
    <string name="no_connection">No Connection</string>
    <string name="time_out">Time Out</string>
    <string name="pleaseـwait">لطفا منتظر بمانید</string>
    <string name="version_app">نسخه:</string>
    <string name="cart">سبد خرید</string>
    <string name="account">حساب کاربری</string>
    <string name="home">خانه</string>
    <string name="category">دسته بندی</string>
    <string name="category_title">دسته بندی:</string>
    <string name="search">جستجو</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">بله</string>
    <string name="ok_date">باشه</string>
    <string name="no_date">بیخیال</string>
    <string name="today_date">امروز</string>
    <string name="not_validate_phone_number">شماره موبایل وارد شده درست نیست. شماره باید با ۰۹ شروع شود</string>
    <string name="empty_phone_number">شماره موبایل وارد نشده است. شماره باید با ۰۹ شروع شود</string>
    <string name="not_validate_pay">مبلغ خود را وارد کنید</string>
    <string name="representation">نمایندگی</string>
    <string name="search_in_all_ads">جستجو...</string>
    <string name="metal_cabinet">کابینت فلزی</string>
    <string name="mdf">ام دی اف</string>
    <string name="members">ممبران</string>
    <string name="glass">های گلاس</string>
    <string name="sorting">مرتب سازی</string>
    <string name="filter">فیلتر</string>
    <string name="product_description">توضیحات محصول</string>
    <string name="product_code_title">کد محصول:</string>
    <string name="price_title">قیمت:</string>
    <string name="discount_price_title">تخفیف خورده</string>
    <string name="discounted">تخفیف خورده:</string>
    <string name="free_delivery_from_resellers">تحویل رایگان از نمایندگی ها فروش</string>
    <string name="resellers">نمایندگی های فروش</string>
    <string name="guarantee_the_authenticity_of_the_goods">ضمانت اصالت کالا</string>
    <string name="product_size">اندازه محصول</string>
    <string name="color">رنگ</string>
    <string name="piece">تعداد تکه</string>
    <string name="thickness">ضخامت ورق گالوانیزه</string>
    <string name="aerial_height">ارتفاع هوایی</string>
    <string name="depth_height">عمق هوایی</string>
    <string name="knobs">جنس دستگیره</string>
    <string name="valid_piece">سرویس یا تیکه کاری</string>
    <string name="white">سفید</string>
    <string name="white_duck">سفید دورمشکی</string>
    <string name="pine">کاج</string>
    <string name="shine">شاین</string>
    <string name="light">لایت</string>
    <string name="design">دیزاین</string>
    <string name="carpet">موکتی</string>
    <string name="stone">سنگی</string>
    <string name="dark_stone">سنگی تیره</string>
    <string name="rafia_roshan">رافیا روشن</string>
    <string name="dark_rafia">رافیا تیره</string>
    <string name="gray">آث</string>
    <string name="walnut">گردویی</string>
    <string name="melch">ملچ</string>
    <string name="white_silver">سفید نقره</string>
    <string name="white_silver_gold">سفید نقره(طلایی)</string>
    <string name="piece_value">تکه</string>
    <string name="thickness_value">میل</string>
    <string name="centimeter_value">سانتی متر</string>
    <string name="plastic">پلاستیکی</string>
    <string name="steel">استیل</string>
    <string name="is_a_service">سرویس است</string>
    <string name="is_a_piece_of_work">تیکه کاری است</string>
    <string name="add_to_cart">افزودن به سبد خرید</string>
    <string name="view_product">مشاهده محصول</string>
    <string name="developing">در حال توسعه</string>
    <string name="exit_app">برای خروج از برنامه بازگشت را کلیک کنید</string>
    <string name="exit_logout">آیا می خواهید از حساب کاربری خود خارج شوید</string>
    <string name="exit_account">خروج از حساب کاربری</string>
    <string name="all_product">همه ی محصولات</string>
    <string name="ground_height">ارتفاع زمینی</string>
    <string name="ground_depth">عمق زمینی</string>
    <string name="base">جنس پایه</string>
    <string name="aerial_depth">عمق هوایی</string>
    <string name="metal">فلزی</string>
    <string name="screen">جنس صفحه ی کابینت</string>
    <string name="screen_depth">ضخامت صفحه ی کابینت</string>
    <string name="search_hint">Search</string>
    <string name="search_all_products">جستجو در کل محصولات</string>
    <string name="insert_order">درج سفارش</string>
    <string name="product_name">نام محصول</string>
    <string name="more_product_name">سایر محصول</string>
    <string name="barcode">کد محصول</string>
    <string name="color_item">رنگ</string>
    <string name="add_order">درج سفارش</string>
    <string name="add">افزودن</string>
    <string name="custom_order">سفارش دلخواه</string>
    <string name="type_product">نوع محصول</string>
    <string name="product_information">اطلاعات محصول</string>
    <string name="order_product_list">لیست سفارش محصولات</string>
    <string name="initial_approval">تایید اولیه</string>
    <string name="final_approval">تایید نهایی</string>
    <string name="approval">تایید میکنم</string>
    <string name="awaiting_approval">در انتظار تایید</string>
    <string name="fail">رد میکنم</string>
    <string name="failed">رد شده</string>
    <string name="created_at_date">تاریخ ثبت:</string>
    <string name="created_at_time">ساعت ثبت:</string>
    <string name="approval_date">تاریخ تایید:</string>
    <string name="initial_approval_date">تاریخ تایید اولیه:</string>
    <string name="final_approval_date">تاریخ تایید نهایی:</string>
    <string name="approval_time">ساعت تایید:</string>
    <string name="initial_approval_time">ساعت تایید اولیه:</string>
    <string name="final_approval_time">ساعت تایید نهایی:</string>
    <string name="failed_date">تاریخ رد:</string>
    <string name="failed_time">ساعت رد:</string>
    <string name="description_reject_product_order">توضیحات رد سفارش محصول</string>
    <string name="edit_product">ویرایش محصول</string>
    <string name="i_realized">متوجه شدم</string>
    <string name="shop_list">لیست فروشگاه ها</string>
    <string name="product_rejection">رد محصول</string>
    <string name="description">توضیحات</string>
    <string name="description_">توضیحات:</string>
    <string name="product_rejection_description">توضیحات رد محصول</string>
    <string name="product_approval">تایید محصول</string>
    <string name="sample_name">سید سجاد سجادی معتمد</string>
    <string name="sample_mobile">09101414285</string>
    <string name="registered_ads">آگهی های ثبت شده</string>
    <string name="my_orders">سفارش های من</string>
    <string name="absence_presence">حضور غیاب</string>
    <string name="location">موقعیت مکانی</string>
    <string name="report">گزارش</string>
    <string name="mission">ماموریت</string>
    <string name="leave">مرخصی</string>
    <string name="view_approved_requests">درخواست های تایید شده</string>
    <string name="view_requests_rejected_by_admin_leave">درخواست های رد شده مرخصی</string>
    <string name="view_requests_rejected_by_admin_mission">درخواست های رد شده ماموریت</string>
    <string name="view_requests_accept_by_admin_leave">درخواست های تایید شده مرخصی</string>
    <string name="view_requests_accept_by_admin_mission">درخواست های تایید شده ماموریت</string>
    <string name="view_all_leave_and_mission_requests">درخواست های مرخصی و ماموریت</string>
    <string name="view_all_leave_requests">درخواست های مرخصی</string>
    <string name="view_all_mission_requests">درخواست های ماموریت</string>
    <string name="view_all_users">کاربران</string>
    <string name="record_and_report_leave">ثبت و گزارش مرخصی</string>
    <string name="mission_registration_and_reporting">ثبت و گزارش ماموریت</string>
    <string name="log_entry_and_exit">ثبت ورود و خروج</string>
    <string name="incoming_and_outgoing_reports">گزارش ورود و خروج ها</string>
    <string name="arrivals_and_departures">ورود و خروج</string>
    <string name="see_arrivals_and_departures">مشاهده ورود و خروج</string>
    <string name="report_category">دسته بندی گزارش</string>
    <string name="phone_number">شماره تماس</string>
    <string name="whatsapp_number">شماره واتساپ</string>
    <string name="first_name_and_last_name">نام و نام خانوادگی</string>
    <string name="select_a_city">انتخاب شهر</string>
    <string name="ways_of_communication">راه های ارتباطی</string>
    <string name="last_call_time">آخرین زمان تماس</string>
    <string name="record_customer_contact_numbers">ثبت شماره تماس های مشتری</string>
    <string name="enable_location">فعال کردن لوکیشن</string>
    <string name="no">نه</string>
    <string name="user_location_permission_not_granted">مجوز مکان کاربر داده نشده است</string>
    <string name="user_location_permission_explanation">توضیح مجوز مکان کاربر</string>
    <string name="getting_to_work">ورود</string>
    <string name="leaving_work">خروج</string>
    <string name="date">تاریخ</string>
    <string name="time">ساعت</string>
    <string name="start_date_monthly_report_user">تاریخ شروع</string>
    <string name="end_date_monthly_report_user">تاریخ یایان</string>
    <string name="start_date_user">تاریخ و ساعت شروع</string>
    <string name="start_date_user_">تاریخ و ساعت شروع:</string>
    <string name="end_date_user">تاریخ و ساعت پایان</string>
    <string name="start_date_">تاریخ و ساعت شروع مرخصی:</string>
    <string name="start_date_arrived">تاریخ و ساعت شروع ورود:</string>
    <string name="start_date_departures">تاریخ و ساعت شروع خروج:</string>
    <string name="start_date">تاریخ و ساعت شروع مرخصی</string>
    <string name="end_date">تاریخ و ساعت پایان مرخصی</string>
    <string name="end_date_">تاریخ و ساعت پایان مرخصی:</string>
    <string name="address">آدرس</string>
    <string name="registered">ثبت شده</string>
    <string name="register">ثبت نام</string>
    <string name="date_of_request_submission">تاریخ ارسال درخواست:</string>
    <string name="date_of_leave_request">تاریخ درخواست مرخصی:</string>
    <string name="start_date_of_request">تاریخ شروع مرخصی:</string>
    <string name="end_date_of_leave">تاریخ پایان مرخصی:</string>
    <string name="condition">وضعیت:</string>
    <string name="type_of_leave">نوع مرخصی</string>
    <string name="type_of_leave_">نوع مرخصی:</string>
    <string name="vacation_registration">ثبت مرخصی</string>
    <string name="middle_time">:</string>
    <string name="shaypoor">شیپور</string>
    <string name="account_shaypoor">کاربران شیپور</string>
    <string name="divar">دیوار</string>
    <string name="account_phone_number">شماره موبایل کاربر:</string>
    <string name="shaypoor_code">کد شیپور:</string>
    <string name="retry">تلاش مجدد</string>
    <string name="my_shaypoor_ads">آگهی های شیپور من</string>
    <string name="active">فعال</string>
    <string name="in_active">غیر فعال</string>
    <string name="add_ads_shaypoor">افزودن آگهی شیپور</string>
    <string name="home_appliances_interior_decoration_and_lighting">لوازم خانگی(دکوراسیون داخلی و روشنایی)</string>
    <string name="condition_of_goods">وضعیت کالا</string>
    <string name="news">نو</string>
    <string name="ad_title">عنوان آگهی</string>
    <string name="type_ad_must_be_10_digits">عنوان آگهی حداقل باید ۱۰ رقم باشد</string>
    <string name="description_ad_must_be_20_digits">توضیحات آگهی حداقل باید 20 رقم باشد</string>
    <string name="price_ad_not_empty">قیمت نمیتواند خالی باشد</string>
    <string name="discount_price_ad_not_empty">تخفیف نمیتواند خالی باشد</string>
    <string name="the_discount_can_not_be_more_than_the_total_price">تخفیف نمیتواند از قیمت کل بیشتر باشد</string>
    <string name="advertisement_registration">ثبت آگهی</string>
    <string name="start_date_register_">تاریخ و ساعت ثبت:</string>
    <string name="start_date_report_">تاریخ و ساعت هشدار:</string>
    <string name="duties_">نوع فعالیت:</string>
    <string name="number_">شماره:</string>
</resources>