<?xml version='1.0' encoding='utf-8'?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_4"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:id="@+id/clParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="end"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical"
            android:padding="@dimen/margin_10">

            <View
                android:layout_width="@dimen/margin_1"
                android:layout_height="@dimen/margin_8" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end|center_vertical"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    android:textColor="@color/secondary_text" />

                <View
                    android:layout_width="@dimen/margin_8"
                    android:layout_height="@dimen/margin_1" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/margin_8"
                    android:gravity="end|center_vertical"
                    android:text="@string/number_"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/ic_number"
                    app:drawableTint="@color/primary_text" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/margin_1"
                android:layout_height="@dimen/margin_8" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtTypeOfDuties"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end|center_vertical"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    android:textColor="@color/secondary_text" />

                <View
                    android:layout_width="@dimen/margin_8"
                    android:layout_height="@dimen/margin_1" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/margin_8"
                    android:gravity="end|center_vertical"
                    android:text="@string/duties_"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/ic_type"
                    app:drawableTint="@color/primary_text" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/margin_1"
                android:layout_height="@dimen/margin_8" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtDateOfRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end|center_vertical"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    android:textColor="@color/secondary_text" />

                <View
                    android:layout_width="@dimen/margin_8"
                    android:layout_height="@dimen/margin_1" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/margin_8"
                    android:gravity="end|center_vertical"
                    android:text="@string/start_date_register_"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/ic_time"
                    app:drawableTint="@color/primary_text" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/margin_1"
                android:layout_height="@dimen/margin_8" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtDateOfReport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end|center_vertical"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    android:textColor="@color/secondary_text" />

                <View
                    android:layout_width="@dimen/margin_8"
                    android:layout_height="@dimen/margin_1" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/margin_8"
                    android:gravity="end|center_vertical"
                    android:text="@string/start_date_report_"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/ic_time"
                    app:drawableTint="@color/primary_text" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/margin_1"
                android:layout_height="@dimen/margin_8" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end|center_vertical"
                    android:paddingLeft="@dimen/margin_4"
                    android:paddingTop="@dimen/margin_2"
                    android:paddingRight="@dimen/margin_4"
                    android:paddingBottom="@dimen/margin_2"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="@dimen/margin_8"
                    android:layout_height="@dimen/margin_1" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/margin_8"
                    android:gravity="end|center_vertical"
                    android:text="@string/condition"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/ic_state"
                    app:drawableTint="@color/primary_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:orientation="vertical">

                <View
                    android:layout_width="@dimen/margin_1"
                    android:layout_height="@dimen/margin_8" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/margin_8"
                    android:gravity="end|center_vertical"
                    android:text="@string/description"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"
                    app:drawableTint="@color/primary_text" />

                <View
                    android:layout_width="@dimen/margin_8"
                    android:layout_height="@dimen/margin_1" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:ems="10"
                    android:gravity="start"
                    android:lines="2"
                    android:maxLines="2"
                    android:minLines="2"
                    android:paddingLeft="@dimen/margin_4"
                    android:paddingTop="@dimen/margin_2"
                    android:paddingRight="@dimen/margin_4"
                    android:paddingBottom="@dimen/margin_2"
                    android:singleLine="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    android:textColor="@color/secondary_text" />


            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/imgBtnRemove"
                android:layout_width="@dimen/margin_52"
                android:layout_height="@dimen/margin_52"
                android:layout_gravity="end"
                android:background="?android:attr/selectableItemBackground"
                android:padding="@dimen/margin_12"
                app:srcCompat="@drawable/ic_delete"
                app:tint="@color/redColor" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/imgBtnEdit"
                android:layout_width="@dimen/margin_52"
                android:layout_height="@dimen/margin_52"
                android:layout_gravity="end"
                android:background="?android:attr/selectableItemBackground"
                android:padding="@dimen/margin_12"
                app:srcCompat="@drawable/ic_edit"
                app:tint="@color/blue_A700" />

            <Switch
                android:id="@+id/switchState"
                android:layout_width="@dimen/margin_52"
                android:layout_height="@dimen/margin_52"
                android:gravity="center" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</androidx.cardview.widget.CardView>